@@ -42,8 +42,8 @@ $messages = array
 	//"cancel"			=> "Cancel current operation",
 	//"new"				=> "Insert a new record",
 	//"delete"			=> "Delete the current record",
-	"print"				=> "Print",
-	"exit"				=> "Exit",
+	//"print"				=> "Print",
+	//"exit"				=> "Exit",
 	"first"				=> "Go to the first element",
 	"prev"				=> "Go to the previous element",
 	"next"				=> "Go to the next element",
