@@ -86,6 +86,7 @@
 			$print->setAccessKey("P");
 
 			$exit =& $this->addButton('exit', 'exit', 'right');
+			$exit->setValue("Close mask");
 			$exit->setAccessKey("X");
 		}
 
