@@ -28,6 +28,9 @@
 - days and months translations were removed from translation messages files (now they're provided by Zend_Locale)
 - yes/no translations were removed from translation messages files (now they're provided by Zend_Locale)
 - boolean normalization works much better now (eg for italian language: it detects "sì" or "si" or "s" without case difference and the same engine works for every language)
+- POT file for the new translation system was prepared and committed to p4a/i18n/templates/p4a.pot
+- P4A_Generate_Default_Label() global function was added, it takes a string such as "this_is_field" and returns "This is a field", useful to generate labels from field names and other things
+- P4A_Button and P4A_Widget were ported to P4A_Generate_Default_Label() to generate default labels
 
 2.2.3
 - a bug with P4A_Label was fixed ("for" property was erroneous with radio and file P4A_Field)
